test/test script.txt


curl --location 'https://achievement-service-852311377699.us-west1.run.app/api/v1/achievements-achieved?locale=en' \
  --header 'x-internal-key: achievement-internal-key-20260510' \
  --header 'x-user-id: 60'



npm run strapi admin:reset-user-password -- --email=support@geniusParentingAI.ca --password=Passw0rd@Strapi

node:events:485
      throw er; // Unhandled 'error' event
      ^

Error: Connection terminated unexpectedly
    at Connection.<anonymous> (/Users/James/develop/langgo/event-bus-client/node_modules/pg/lib/client.js:180:73)
    at Object.onceWrapper (node:events:621:28)
    at Connection.emit (node:events:507:28)
    at Connection.emit (node:domain:489:12)
    at Socket.<anonymous> (/Users/James/develop/langgo/event-bus-client/node_modules/pg/lib/connection.js:61:12)
    at Socket.emit (node:events:507:28)
    at Socket.emit (node:domain:489:12)
    at Pipe.<anonymous> (node:net:346:12)
Emitted 'error' event on Client instance at:
    at Client._handleErrorEvent (/Users/James/develop/langgo/event-bus-client/node_modules/pg/lib/client.js:393:10)
    at Connection.<anonymous> (/Users/James/develop/langgo/event-bus-client/node_modules/pg/lib/client.js:198:16)
    at Object.onceWrapper (node:events:621:28)
    [... lines matching original stack trace ...]
    at Pipe.<anonymous> (node:net:346:12)

Node.js v24.2.0



• Canonical event schemas in this project:

  1. user.registered

  {
    "eventId": "user.registered:8",
    "eventType": "user.registered",
    "occurredAt": "2026-05-12T02:38:59.747Z",
    "userId": 8,
    "username": "vivian",
    "visibleOnLadder": true
  }

  2. user_profile.visibility_updated

  {
    "eventId": "user_profile.visibility_updated:60:2026-05-12T02:38:59.747Z",
    "eventType": "user_profile.visibility_updated",
    "occurredAt": "2026-05-12T02:38:59.747Z",
    "userId": 60,
    "username": "chinese2",
    "visibleOnLadder": false
  }

  3. flashcard.created

  {
    "eventId": "flashcard.created:3001",
    "eventType": "flashcard.created",
    "occurredAt": "2026-05-12T02:38:59.747Z",
    "flashcardId": 3001,
    "userId": 8,
    "username": "vivian"
  }

  4. flashcard.reviewed

  {
    "eventId": "flashcard.reviewed:3001:8:2026-05-12T02:38:59.747Z",
    "eventType": "flashcard.reviewed",
    "occurredAt": "2026-05-12T02:38:59.747Z",
    "flashcardId": 3001,
    "userId": 8,
    "username": "vivian",
    "result": "correct",
    "tierBefore": "new",
    "effective": true
  }

  5. flashcard.review_tier_promoted

  {
    "eventId": "flashcard.review_tier_promoted:3001:8:2026-05-12T02:38:59.747Z",
    "eventType": "flashcard.review_tier_promoted",
    "occurredAt": "2026-05-12T02:38:59.747Z",
    "flashcardId": 3001,
    "userId": 8,
    "username": "vivian",
    "tierBefore": "new",
    "tierAfter": "warmup"
  }

  6. article.created

  {
    "eventId": "article.created:7001",
    "eventType": "article.created",
    "occurredAt": "2026-05-12T02:38:59.747Z",
    "articleId": 7001,
    "userId": 8,
    "username": "vivian"
  }



